...
"SLEEP_TIMER_STOP_AFTER_THIS_VIDEO" = "Stop After This Video";
"SLEEP_TIMER_STOP_AFTER_THIS_TRACK" = "Stop After This Track";
"CONTINUE_PLAYBACK" = "Continue playback?";
"CONTINUE_PLAYBACK_LONG" = "Would you like to continue playback of \"%@\" where you left off?";

"BUTTON_BACK" = "Back";
"BUTTON_DONE" = "Done";
"BUTTON_OPEN" = "Open";
"BUTTON_PASTE_AND_OPEN" = "Paste and Open";
"BUTTON_PASTE_AND_LOAD" = "Paste and Load";
"BUTTON_CANCEL" = "Cancel";
"BUTTON_CLOSE" = "Close";
"BUTTON_SAVE" = "Save";
...
"NO_FAVORITES_DESCRIPTION" = "Mark your favorite folders while browsing servers to have them listed here.";
"ADD_FAVORITE" = "Add to Favorites";
"REMOVE_FAVORITE" = "Remove from Favorites";
"FAVORITE_ALERT_TITLE" = "Would you like to add this folder to your Favorites?";
"UNFAVORITE_ALERT_TITLE" = "Would you like to remove this folder from your Favorites?";

"OPEN_NETWORK" = "Open Network Stream";
"NETWORK_TITLE" = "Network Stream";
"RECENT_STREAMS" = "Recent Streams";
"REMOVE_FROM_RECENT_STREAMS" = "Remove from Recent Streams";
"HTTP_UPLOAD_SERVER_OFF" = "Inactive Server";
"HTTP_UPLOAD_NO_CONNECTIVITY" = "No active Wi-Fi connection";
"OPEN_STREAM_OR_DOWNLOAD" = "Would you like to download or play this URL?";
"ALWAYS_STREAM_URL" = "Always play URLs";
"SHARED_VLC_IOS_LIBRARY" = "Shared VLC for iOS Library";
"SMB_CIFS_FILE_SERVERS" = "File Servers (SMB)";
"http://myserver.com/file.mkv" = "http://myserver.com/file.mkv";

"MANAGED_SERVERS" = "Managed";

"SMB_CIFS_FILE_SERVERS_SHORT" = "SMB";

"HTTP_DOWNLOAD_CANCELLED" = "Download canceled by user";
...

"VERSION_FORMAT" = "Version: %@";
"BASED_ON_FORMAT" = "Based on:<br />%@";

"NEW" = "NEW";

"VO_VIDEOPLAYER_TITLE" = "Video Player";
"VO_VIDEOPLAYER_DOUBLETAP" = "Double tap to show or hide playback controls";

"FIRST_STEPS_ITUNES" = "File Sync";
"FIRST_STEPS_ITUNES_TITLE" = "Sync With Your Computer";
"FIRST_STEPS_ITUNES_DETAILS" = "Connect your %@ to use the Finder or iTunes. In the Finder, select the \"Files\" tab and choose VLC to transfer files.";
"FIRST_STEPS_WIFI_TITLE" = "Share via Wi-Fi";
...
"BACKWARD_HINT" = "Jump Backwards";

"PREVIOUS_BUTTON" = "Previous";
"PREVIOUS_HINT" = "Previous media";

"PLAY_PAUSE_BUTTON" = "Play or pause";
"PLAY_PAUSE_HINT" = "Play or Pause current playback";

"STOP_BUTTON" = "Stop";
"CLOSE_HINT" = "Stop the playback";

"MINIMIZE_BUTTON" = "Minimize";
"MINIMIZE_HINT" = "Minimize the player";
...
"SHUFFLE_OFF_HINT" = "Do not shuffle media list";

"ASPECT_RATIO_TITLE" = "Aspect Ratios";
"VIDEO_ASPECT_RATIO_BUTTON" = "Video aspect ratio";
"VIDEO_ASPECT_RATIO_HINT" = "Change the aspect ratio of the current video";

"MORE_OPTIONS_BUTTON" = "More";
"MORE_OPTIONS_HINT" = "View more option controls";

"PLAYBACK_CONTROLS_BAR_TITLE" = "Playback controls";
"PLAYBACK_CONTROLS_BAR_HINT" = "Pause, seek, next chapter";

"PLAYER_WARNING_SUBTITLE_CAST_TITLE" = "Subtitles unsupported";
...
