...
    static let artists = "artists"
    @objc static let localNetwork = "localNetwork"
    static let playlist = "playlist"
    @objc static let settings = "settings"
    static let local = "local"
    static let cloud = "cloud"
    static let stream = "stream"
    static let downloads = "downloads"
    @objc static let done = "done"
    static let contact = "contact"
    @objc static let about = "about"
    @objc static let playPause = "playPause"
    static let videoPlayerScrubBar = "videoPlayerScrubBar"
}

