...
                                            <rect key="frame" x="283" y="4.5" width="29" height="31"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="31" id="VHL-kj-SOm"/>
                                                <constraint firstAttribute="width" constant="29" id="zTY-if-NSJ"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                            <state key="normal" image="flatDeleteButton">
                                                <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </state>
                                            <state key="highlighted">
                                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </state>
...
